--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,28 +1,26 @@
 ---
-
 - name: Converge
   hosts: all
   vars:
     # EasyRSA
     easyrsa_generate_dh: true
     easyrsa_servers:
-      - name: server
+      - server
     easyrsa_clients:
-      - name: client1
-      - name: client2
+      - client1
+      - client2
     easyrsa_pki_dir: /etc/easyrsa/pki
 
     # OpenVPN
     openvpn_keydir: "{{ easyrsa_pki_dir }}"
     openvpn_clients: "{{ easyrsa_clients }}"
-    # openvpn_download_clients: true
-    # openvpn_download_dir: /tmp/
-    openvpn_crl_mode: 'dir'
+    openvpn_download_clients: true
+    openvpn_download_dir: /tmp/
     openvpn_ccd_configs:
       - name: client1
         content: '# pass'
       - name: client2
         content: '# pass'
   roles:
-    - role: nkakouros.easyrsa
+    - role: nkakouros-original.easyrsa
     - role: Stouts.openvpn
