--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,13 +31,10 @@ openvpn_keydir: "{{ openvpn_etcdir }}/keys"
 # easyrsa installation and all keys/certificates will be located fine.
 # }}}
 # Server configuration {{{
-# The interface that traffic will come in from (WARNING default: any)
-openvpn_interface: ''
-
 # Default settings (See OpenVPN documentation)
 openvpn_host: "{{ inventory_hostname }}"
 
-openvpn_port: 1194
+openvpn_port: '1194'
 openvpn_proto: udp
 openvpn_dev: tun
 openvpn_server: 10.8.0.0 255.255.255.0
@@ -53,7 +50,6 @@ openvpn_verb: 3
 openvpn_user: nobody
 openvpn_group: nogroup
 openvpn_resolv_retry: infinite
-openvpn_client_to_client: true
 
 openvpn_server_options: []
 # Additional server options that are not covered by the above variables. For
@@ -61,6 +57,21 @@ openvpn_server_options: []
 # openvpn_server_options:
 # - dev-node MyTap
 # - client-to-client
+# }}}
+# Management {{{
+openvpn_management_enable: false
+# Whether to enable the OpenVPN management server. For more information about
+# the management server, see
+# https://github.com/OpenVPN/openvpn/blob/master/doc/management-notes.txt
+
+openvpn_management_host: localhost
+openvpn_management_port: 7505
+# Set where the management server will listen on.
+
+openvpn_management_pass: ~
+# Set a password that will be required when connecting to the management server.
+# It is important to set a password if you expose the server to the public
+# internet via `openvpn_management_host`.
 # }}}
 # Networking {{{
 # Set to true to make the vpn server NAT incoming traffic
