--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -14,6 +14,9 @@
 
 - include_tasks: authentication/tls.yml
 
+- include_tasks: core/management.yml
+  when: openvpn_management_enable | bool
+
 - include_tasks: core/configure.yml
 
 - include_tasks: core/read-client-files.yml
