--- a/tasks/system/firewall.yml
+++ b/tasks/system/firewall.yml
@@ -29,7 +29,7 @@
 - name: Allow connections to the OpenVPN server
   iptables:
     chain: INPUT
-    in_interface: "{{ openvpn_interface | default(omit, true) }}"
+    in_interface: "{{ openvpn_out_interface | default(omit, true) }}"
     ctstate: NEW
     protocol: udp
     destination_port: "{{ openvpn_port }}"
@@ -37,41 +37,3 @@
     comment: incoming_openvpn
   notify: openvpn save iptables
   when: iptables_rules.stdout.find("incoming_openvpn") == -1
-
-- name: Allow forwarding from tun/tap to interface
-  iptables:
-    chain: FORWARD
-    in_interface: "{{ openvpn_dev }}+"
-    out_interface: "{{ openvpn_interface | default(omit, true) }}"
-    jump: ACCEPT
-    comment: forward_tun_tap
-  notify: openvpn save iptables
-  when: iptables_rules.stdout.find("forward_tun_tap") == -1
-
-- name: Allow forwarding from interface to tun/tap
-  iptables:
-    chain: FORWARD
-    in_interface: "{{ openvpn_interface | default(omit, true) }}"
-    out_interface: "{{ openvpn_dev }}+"
-    jump: ACCEPT
-    comment: forward_reverse
-  notify: openvpn save iptables
-  when: iptables_rules.stdout.find("forward_reverse") == -1
-
-- name: Allow NATing outgoing vpn traffic
-  iptables:
-    table: nat
-    chain: POSTROUTING
-    source: >-
-      {{
-        openvpn_server
-        | regex_replace('^(?P<host>.+)\s+(?P<mask>.+)$', '\g<host>/\g<mask>')
-        | ipaddr('net')
-      }}
-    out_interface: "{{ openvpn_interface | default(omit, true) }}"
-    jump: MASQUERADE
-    comment: vpn_masquerade
-  notify: openvpn save iptables
-  when:
-    - iptables_nat_rules.stdout.find("vpn_masquerade") == -1
-    - not openvpn_server
