--- a/meta/beats/elasticsearch-ingest-pipelines.yml
+++ b/meta/beats/elasticsearch-ingest-pipelines.yml
@@ -7,6 +7,7 @@ pipeline:
         field: message
         ignore_failure: true
         patterns:
+          # yamllint disable-line rule:line-length
           - "%{TIMESTAMP:openvpn.date} %{DATA} \\[%{DATA:openvpn.common_name}\\] Peer Connection Initiated with \\[AF_INET\\]%{IP:openvpn.host}:%{POSINT:openvpn.port}"
         pattern_definitions:
           TIMESTAMP: "%{DAY} %{MONTH}  ?%{MONTHDAY} %{TIME} %{YEAR}"
