--- a/tasks/system/firewall-deps.yml
+++ b/tasks/system/firewall-deps.yml
@@ -8,7 +8,11 @@
     packages:
       - iptables
       - iptables-persistent
-      - module-init-tools
+
+- name: Install more firewall deps
+  apt:
+    name: module-init-tools
+  when: ansible_distribution_release == 'jessie'
 
 - name: Read existing iptable rules
   shell: iptables -L
@@ -25,15 +29,3 @@
     - skip_ansible_lint
   register: iptables_nat_rules
   changed_when: false
-
-- name: Allow connections to the OpenVPN server
-  iptables:
-    chain: INPUT
-    in_interface: "{{ openvpn_out_interface | default(omit, true) }}"
-    ctstate: NEW
-    protocol: udp
-    destination_port: "{{ openvpn_port }}"
-    jump: ACCEPT
-    comment: incoming_openvpn
-  notify: openvpn save iptables
-  when: iptables_rules.stdout.find("incoming_openvpn") == -1
