--- a/tasks/system/bridge/Debian.yml
+++ b/tasks/system/bridge/Debian.yml
@@ -2,7 +2,7 @@
 
 - name: Setup bridge
   template:
-    src: bridge-interface.deb.j2
+    src: bridge/bridge-interface.deb.j2
     dest: "/etc/network/interfaces.d/{{ openvpn_dev }}"
   when: openvpn_bridge | bool
   notify: restart networking debian
