--- a/tasks/authentication/ldap.yml
+++ b/tasks/authentication/ldap.yml
@@ -2,6 +2,6 @@
 
 - name: Setup LDAP
   template:
-    src: auth-ldap.conf.j2
+    src: authentication/auth-ldap.conf.j2
     dest: /etc/openvpn/auth-ldap.conf
   when: openvpn_use_ldap | bool
