--- a/meta/beats/elasticsearch-ingest-pipelines.yml
+++ b/meta/beats/elasticsearch-ingest-pipelines.yml
@@ -1,21 +1,50 @@
 ---
 
-pipeline:
-  description: "openvpn-connection-log-line"
-  processors:
-    - grok:
-        field: message
-        ignore_failure: true
-        patterns:
-          # yamllint disable-line rule:line-length
-          - "%{TIMESTAMP:openvpn.date} %{DATA} \\[%{DATA:openvpn.common_name}\\] Peer Connection Initiated with \\[AF_INET\\]%{IP:openvpn.host}:%{POSINT:openvpn.port}"
-        pattern_definitions:
-          TIMESTAMP: "%{DAY} %{MONTH}  ?%{MONTHDAY} %{TIME} %{YEAR}"
-    - gsub:
-        field: "openvpn.date"
-        pattern: "  "
-        replacement: ' '
-    - date:
-        field: "openvpn.date"
-        formats:
-          - EEE MMM d HH:mm:ss yyyy
+pipelines:
+  - description: "openvpn-connection-log-line"
+    processors:
+      - set:
+          field: openvpn
+          value: {}
+      - grok:
+          field: message
+          ignore_failure: true
+          patterns:
+            # yamllint disable-line rule:line-length
+            - "%{TIMESTAMP:openvpn.date} %{DATA} \\[%{DATA:openvpn.common_name}\\] Peer Connection Initiated with \\[AF_INET\\]%{IP:openvpn.client_ip}:%{POSINT:openvpn.port}"
+          pattern_definitions:
+            TIMESTAMP: "%{DAY} %{MONTH}  ?%{MONTHDAY} %{TIME} %{YEAR}"
+      - gsub:
+          field: "openvpn.date"
+          pattern: "  "
+          replacement: ' '
+      - date:
+          field: "openvpn.date"
+          formats:
+            - EEE MMM d HH:mm:ss yyyy
+      - set:
+          field: 'openvpn.event'
+          value: 'client-connected'
+  # Parses log lines created with the
+  # `templates/etc/openvpn/scripts/client-disconnect.sh` script.
+  - description: "openvpn-disconnection-log-line"
+    processors:
+      - set:
+          field: openvpn
+          value: {}
+      - grok:
+          field: message
+          ignore_failure: true
+          patterns:
+            - "%{DATESTAMP_OTHER:openvpn.date},%{DATA:openvpn.common_name},%{IP:openvpn.client_ip}"
+      - gsub:
+          field: "openvpn.date"
+          pattern: "  "
+          replacement: ' '
+      - date:
+          field: "openvpn.date"
+          formats:
+            - EEE MMM d HH:mm:ss z yyyy
+      - set:
+          field: 'openvpn.event'
+          value: 'client-disconnected'
