--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - MOLECULE_DISTRO=debian9 MOLECULE_INIT_CMD=/lib/systemd/systemd
   - MOLECULE_DISTRO=debian10 MOLECULE_INIT_CMD=/lib/systemd/systemd
 install:
-  - pip install docker molecule
+  - pip install docker molecule ansible-lint
 
 script:
   - molecule test
