IPv6 forwarding only if the VPN server manages an IPv6 subnet

--- a/tasks/system/forwarding.yml
+++ b/tasks/system/forwarding.yml
@@ -18,4 +18,4 @@
     reload: true
   when:
     not lookup('env', 'IN_MOLECULE') | d(false, true) | bool
-    and openvpn_ipv6_server is defined
+    and openvpn_ipv6_server | length > 0
