--- a/tasks/authentication/tls.yml
+++ b/tasks/authentication/tls.yml
@@ -2,7 +2,7 @@
 
 - name: Generate tls-auth key
   command:
-    openvpn --genkey --secret "{{ openvpn_etcdir }}/ovpns/{{ openvpn_tls_key }}"
+    openvpn --genkey --secret "{{ openvpn_client_config_dir }}/{{ openvpn_tls_key }}"
   args:
-    creates: "{{ openvpn_etcdir }}/ovpns/{{ openvpn_tls_key }}"
+    creates: "{{ openvpn_client_config_dir }}/{{ openvpn_tls_key }}"
   when: openvpn_tls_auth
