--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -33,8 +33,8 @@
         - ansible_lsb.codename != "trusty"
       listen: openvpn save iptables
 
-- name: Restart OpenVPN service
+- name: Restart OpenVPN service ({{ openvpn_service_name or penvpn_service }})
   service:
-    name: "{{ openvpn_service }}"
+    name: "{{ openvpn_service_name or penvpn_service }}"
     state: restarted
   listen: openvpn restart
