--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -179,9 +179,11 @@ openvpn_use_pam_users: []
 
 # LDAP authentication and configuration (optional)
 openvpn_use_ldap: false
+openvpn_ldap_config: '{{ openvpn_etcdir }}/auth-ldap.conf'
 openvpn_ldap_server:  # ldapserver.example.org or ldap://ldapserver.example.org
 openvpn_ldap_tlsenable: 'false'
 openvpn_ldap_follow_referrals: 'false'
+openvpn_ldap_password_is_cr: 'false'
 openvpn_ldap_bind_dn:  # cn=administrator,cn=users,dc=ctc,dc=local
 openvpn_ldap_bind_password:
 openvpn_ldap_base_dn:  # dc=ctc,dc=local
