--- a/tasks/authentication/ldap.yml
+++ b/tasks/authentication/ldap.yml
@@ -3,5 +3,5 @@
 - name: Setup LDAP
   template:
     src: authentication/auth-ldap.conf.j2
-    dest: /etc/openvpn/auth-ldap.conf
+    dest: '{{ openvpn_ldap_config }}'
   when: openvpn_use_ldap | bool
