--- a/tasks/authentication/ldap.yml
+++ b/tasks/authentication/ldap.yml
@@ -4,4 +4,5 @@
   template:
     src: authentication/auth-ldap.conf.j2
     dest: /etc/openvpn/auth-ldap.conf
+    mode: 0o644
   when: openvpn_use_ldap | bool
