--- a/tasks/authentication/pam.yml
+++ b/tasks/authentication/pam.yml
@@ -4,12 +4,16 @@
   template:
     src: authentication/openvpn.pam.j2
     dest: /etc/pam.d/openvpn
+    mode: 0o644
   when: openvpn_use_pam | bool
 
 - name: Configure users
   htpasswd:
     path: "{{ openvpn_etcdir }}/users"
-    name: "{{ item.name }}"
-    password: "{{ item.password }}"
+    name: "{{ _openvpn__pam_user.name }}"
+    password: "{{ _openvpn__pam_user.password }}"
     crypt_scheme: des_crypt
+    mode: 0o644
   loop: "{{ openvpn_use_pam_users }}"
+  loop_control:
+    loop_var: _openvpn__pam_user
