--- a/tasks/core/clients.yml
+++ b/tasks/core/clients.yml
@@ -3,21 +3,25 @@
 - name: Generate client configurations
   template:
     src: "{{ openvpn_client_conf_template }}"
-    dest: "{{ openvpn_etcdir }}/ovpns/{{ item }}.ovpn"
+    dest: "{{ openvpn_etcdir }}/ovpns/{{ _openvpn__client }}.ovpn"
+    mode: 0o644
   loop: "{{ openvpn_clients }}"
+  loop_control:
+    loop_var: _openvpn__client
   register: openvpn_clients_changed
 
 - name: Pack clients
   command: >-
     zip -j
-      {{ item }}.zip
-      {{ openvpn_keydir }}/issued/{{ item }}.crt
-      {{ openvpn_keydir }}/private/{{ item }}.key
-      {{ item }}.ovpn
+      {{ _openvpn__client }}.zip
+      {{ openvpn_keydir }}/issued/{{ _openvpn__client }}.crt
+      {{ openvpn_keydir }}/private/{{ _openvpn__client }}.key
+      {{ _openvpn__client }}.ovpn
       {{ openvpn_keydir }}/ca.crt
       {{ openvpn_tls_key if openvpn_tls_auth else '' }}
   loop: "{{ openvpn_clients }}"
   loop_control:
+    loop_var: _openvpn__client
     index_var: index
   args:
     chdir: "{{ openvpn_etcdir }}/ovpns/"
@@ -25,21 +29,24 @@
 
 - name: Download client credentials
   fetch:
-    src: "{{ openvpn_etcdir }}/ovpns/{{ item }}.zip"
+    src: "{{ openvpn_etcdir }}/ovpns/{{ _openvpn__client }}.zip"
     dest: "{{ openvpn_download_dir }}"
     flat: true
     validate_checksum: true
   loop: "{{ openvpn_clients }}"
   loop_control:
+    loop_var: _openvpn__client
     index_var: index
   when: openvpn_download_clients | bool
   tags: openvpn-download
 
 - name: Extract client credentials
   unarchive:
-    src: "{{ openvpn_download_dir }}/{{ item }}.zip"
+    src: "{{ openvpn_download_dir }}/{{ _openvpn__client }}.zip"
     dest: "{{ openvpn_download_dir }}"
   loop: "{{ openvpn_clients }}"
+  loop_control:
+    loop_var: _openvpn__client
   become: false
   when:
     - openvpn_download_clients | bool
@@ -51,12 +58,16 @@
   file:
     path: "{{ openvpn_ccd }}"
     state: directory
+    mode: 0o755
 
 - name: Upload ccd configs
   copy:
-    content: "{{ item.content }}"
-    dest: "{{ openvpn_ccd }}/{{ item.name }}"
+    content: "{{ _openvpn__ccd_config.content }}"
+    dest: "{{ openvpn_ccd }}/{{ _openvpn__ccd_config.name }}"
+    mode: 0o644
   loop: "{{ openvpn_ccd_configs }}"
+  loop_control:
+    loop_var: _openvpn__ccd_config
 
 - name: Disable client-to-client at the IP layer
   iptables:
