--- a/tasks/system/routing.yml
+++ b/tasks/system/routing.yml
@@ -30,11 +30,13 @@
         | regex_replace('^(?P<host>.+)\s+(?P<mask>.+)$', '\g<host>/\g<mask>')
         | ansible.netcommon.ipaddr('net')
       }}
-    destination: "{{ item }}"
+    destination: "{{ _openvpn__range }}"
     out_interface: "{{ openvpn_out_interface | default(omit, true) }}"
     jump: SNAT
     to_source: "{{ openvpn_nat_address }}"
     comment: vpn_masquerade
   loop: "{{ openvpn_nat_ranges }}"
+  loop_control:
+    loop_var: _openvpn__range
   when: iptables_nat_rules.stdout.find("vpn_masquerade") == -1
   notify: openvpn save iptables
