Replaces ciphers config with ncp-ciphers

--- a/tasks/assertions.yml
+++ b/tasks/assertions.yml
@@ -20,4 +20,6 @@
     deprecated_vars:
       - name: openvpn_comp_lzo
         replacement: openpvpn_compression
+      - name: openvpn_cipher
+        replacement: openvpn_ncp_ciphers
 
