--- a/tasks/assertions.yml
+++ b/tasks/assertions.yml
@@ -21,5 +21,5 @@
       - name: openvpn_comp_lzo
         replacement: openpvpn_compression
       - name: openvpn_cipher
-        replacement: openvpn_ncp_ciphers
+        replacement: openvpn_data_ciphers
 
